--- a/WebFinal/WebFinal/Views/Project/Index.cshtml
+++ b/WebFinal/WebFinal/Views/Project/Index.cshtml
@@ -14,7 +14,7 @@
     <h2>Crear tu viaje</h2>
 
 
-    @using (Html.BeginForm("Save", "Students"))
+    @using (Html.BeginForm("Save", "Project"))
     {
         @Html.HiddenFor(model => model.DataForm.Id)
 
